# tatiana

./: .gitignore  Makefile  README.md  __init__.py  entity.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
components/: __init__.py  sprite.py
examples/: README.md
examples/animations/: main.py  movement.py
examples/image/: main.py
examples/movement/: main.py  movement.py
tatiana/: __init__.py  __main__.py  entity.py  main.py  movement.py  typenames.py  world.py
tatiana/components/: __init__.py  sprite.py  transform.py
tatiana/engine/: __init__.py  entity.py  world.py
tatiana/engine/components/: __init__.py  sprite.py
tatiana/engine/entities/: camera.py
tatiana/engine/structures/: __init__.py  animation.py
tatiana/engine/systems/: __init__.py  render.py
tatiana/entities/: __init__.py  camera.py
tatiana/structures/: __init__.py  animation.py
tatiana/systems/: __init__.py  render.py
